# weechat-matrix-rs

./: .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain
.github/workflows/: release.yml
src/: commands.rs  completions.rs  config.rs  config_macros.rs  connection.rs  debug.rs  executor.rs  lib.rs  render.rs  room_buffer.rs  server.rs  utils.rs  verification_buffer.rs
src/bar_items/: buffer_name.rs  buffer_plugin.rs  mod.rs  status.rs
src/commands/: ban.rs  buffer_clear.rs  create.rs  devices.rs  invite.rs  keys.rs  matrix.rs  me.rs  mod.rs  page_up.rs  part.rs  room.rs  unban.rs  verification.rs  verify.rs
src/room/: buffer.rs  members.rs  mod.rs  verification.rs
