[package]
name = "weechat-matrix"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "ISC"
resolver = "2"

[lib]
name = "matrix"
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
clap = "2.34.0"
chrono = "0.4.22"
dashmap = "5.4.0"
url = "2.3.1"
serde_json = "1.0.85"
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1.21.1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
unicode-segmentation = "1.10.0"
qrcode = { version = "0.13.0", default-features = false }
image = { version = "0.25.0", default-features = false, features = ["jpeg"] }

[dependencies.weechat]
git = "https://github.com/poljar/rust-weechat"
features = ["async", "config_macro"]

[dependencies.matrix-sdk]
version = "0.7.0"
features = ["markdown", "socks", "qrcode"]

[profile.dev.package]
sha2 = { opt-level = 2 }
